--- a/AzureTraining/AzureTraining/AzureTraining.csproj
+++ b/AzureTraining/AzureTraining/AzureTraining.csproj
@@ -350,7 +350,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Service References\Application Insights\ConnectedService.json" />
-    <Content Include="Views\Storage\Index.cshtml" />
+    <Content Include="Views\Storage\Blobs.cshtml" />
     <Content Include="Scripts\umd\popper.min.js.map" />
     <Content Include="Scripts\umd\popper.js.map" />
     <Content Include="Scripts\umd\popper-utils.min.js.map" />
