--- a/BibliotecaMusical/BibliotecaMusical/bin/BibliotecaMusical.dll.config
+++ b/BibliotecaMusical/BibliotecaMusical/bin/BibliotecaMusical.dll.config
@@ -19,7 +19,9 @@
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" maxRequestLength="1048576" executionTimeout="3600" />
     <httpModules>
