--- a/BibliotecaMusical/BibliotecaMusical/bin/BibliotecaMusical.dll.config
+++ b/BibliotecaMusical/BibliotecaMusical/bin/BibliotecaMusical.dll.config
@@ -35,7 +35,7 @@
       </requestFiltering>
     </security>
     <modules>
-      <remove name="FormsAuthentication" />
+      <!--<remove name="FormsAuthentication" />-->
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
       <remove name="TelemetryCorrelationHttpModule" />
