--- a/AzureTraining/AzureTraining/AzureTraining.csproj
+++ b/AzureTraining/AzureTraining/AzureTraining.csproj
@@ -362,6 +362,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Storage\Tables.cshtml" />
+    <Content Include="Views\Storage\Queues.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
