--- a/BibliotecaMusical/BibliotecaMusical/BibliotecaMusical.csproj
+++ b/BibliotecaMusical/BibliotecaMusical/BibliotecaMusical.csproj
@@ -241,8 +241,12 @@
     <Compile Include="Models\BlobModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\UserActionModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\LibraryService.cs" />
+    <Compile Include="Services\UserActionService.cs" />
+    <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\AzureService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -354,7 +358,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <Content Include="Views\Library\Index.cshtml" />
+    <Content Include="Views\Library\Files.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
