Adding GetFileData and Stream/Play mp3 logic.

--- a/BibliotecaMusical/BibliotecaMusical/BibliotecaMusical.csproj
+++ b/BibliotecaMusical/BibliotecaMusical/BibliotecaMusical.csproj
@@ -238,7 +238,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\BlobModel.cs" />
+    <Compile Include="Models\FileModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\UserActionModel.cs" />
