--- a/BibliotecaMusical/BibliotecaMusical.WebJob/packages.config
+++ b/BibliotecaMusical/BibliotecaMusical.WebJob/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Azure.WebJobs" version="1.1.2" targetFramework="net461" />
   <package id="Microsoft.Azure.WebJobs.Core" version="1.1.2" targetFramework="net461" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="9.2.0" targetFramework="net461" />
 </packages>
