--- a/BibliotecaMusical/BibliotecaMusical.WebJob/App.config
+++ b/BibliotecaMusical/BibliotecaMusical.WebJob/App.config
@@ -6,6 +6,9 @@
     <add name="AzureWebJobsDashboard" connectionString="UseDevelopmentStorage=true" />
     <add name="AzureWebJobsStorage" connectionString="UseDevelopmentStorage=true" />
   </connectionStrings>
+  <appSettings>
+    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+  </appSettings>
     <startup> 
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
